---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2020.09.16
  Info:
    - Initial alpha release
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 2020.??.??
  Bugfixes:
    - Mining the Tractor gave you a vanilla Car
    - Mining vehicles crashed due to auto-pilot looking for vehicles that no longer exist
    - Resource scanner GUI responded to events that didn't belong to it